# farfetch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
.zed/: tasks.json
docs/: instructions.md
farfetch/: Cargo.toml
farfetch-zed/: Cargo.toml  extension.toml
farfetch-zed/src/: lib.rs
farfetch/src/: main.rs
farfetch/src/clipboard/: mod.rs
farfetch/src/config/: types.rs
farfetch/src/editor/: mod.rs
farfetch/src/git/: mod.rs
farfetch/src/network/: client.rs
farfetch/src/ui/: header.rs  highlight.rs  mod.rs  request.rs  styles.rs
src/: app.rs  events.rs  main.rs
src/config/: environment.rs  loader.rs  mod.rs
src/curl/: mod.rs
src/editor/: mod.rs
src/fuzzy/: mod.rs
src/network/: types.rs
src/state/: focus.rs  mod.rs  request_state.rs  response_state.rs
src/storage/: collections.rs  history.rs  mod.rs  types.rs
src/ui/: body.rs  footer.rs  overlay.rs  params.rs  response.rs  sidebar.rs
